minor spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ svg {
 
 .the_viz {
 	text-align: center;
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
 
